<resources>
    <string name="app_name">chatapp</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="already_have_account">Already have account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
</resources>